<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">forbesList</string>
    <string name="join_title">JOIN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_my_uploads">MyUploadsActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="register"> Register </string>
    <string name="search_title">Title </string>
    <string name="search_author">Author </string>
    <string name="snap">Snapshot of the Book </string>
    <string name="title_activity_tab_main">TabMainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="titleExample">Java for Dummies</string>
    <string name="imgContentDescription">img of book</string>
    <string name="uploader">Uploader</string>
    <string name="Price">Price</string>
    <string name="Location">Location</string>
    <string name="Phone">Phone</string>
    <string name="nameExample">Sung Jae Lee</string>
    <string name="Email">Email</string>
    <string name="examplePrice">$ 50</string>
    <string name="exampleLocation">Pittsburgh, PA</string>
    <string name="examplePhone">412 213 1231</string>
    <string name="exampleEmail">example@gmail.com</string>
    <string name="examplePw">******</string>
    <string name="pw">PW</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="takeSnapShot">Take Snapshot Now</string>
    <string name="search_price">Price</string>
    <string name="img">img</string>

</resources>