<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/phone_p"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="17dp"
        android:text="@string/email"
        android:textColor="#0099cc" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/nameExample"
        android:textColor="#0099cc"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/imgContentDescription"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/profile_email"
        android:layout_marginBottom="111dp"
        android:text="@string/phone"
        android:textColor="#0099cc" />

    <EditText
        android:id="@+id/phone_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profile_phone"
        android:layout_alignBottom="@+id/profile_phone"
        android:layout_alignLeft="@+id/email_p"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/email_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profile_email"
        android:layout_alignBottom="@+id/profile_email"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:hint="@string/exampleEmail"
        android:inputType="textEmailAddress" />

</RelativeLayout>