<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UploadActivity" >

    <EditText
        android:id="@+id/author_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/upload_author"
        android:layout_alignLeft="@+id/title_u"
        android:ems="10"
        android:hint="@string/search_author" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/title_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/upload_title"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/upload_author"
        android:ems="10" 
        android:hint="@string/search_title"/>

    <Button
        android:id="@+id/button_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:textColor="#ffffff"
        android:background="#0099cc"
        android:text="@string/upload" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upload_snapshot"
        android:layout_below="@+id/imageView"
        android:textColor="#ffffff"
        android:background="#0099cc"
        android:text="@string/takeSnapShot" />

    <ImageView
        android:id="@+id/imageView"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/upload_snapshot"
         />

    <TextView
        android:id="@+id/upload_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upload_author"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/search_title"
        android:textColor="#0099cc" />

    <TextView
        android:id="@+id/upload_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/upload_title"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/search_author"
        android:textColor="#0099cc" />

    <TextView
        android:id="@+id/upload_snapshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upload_author"
        android:layout_below="@+id/author_u"
        android:layout_marginTop="54dp"
        android:text="@string/snap"
        android:textColor="#0099cc" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upload_author"
        android:layout_below="@+id/upload_author"
        android:layout_marginTop="20dp"
        android:text="@string/search_price"
        android:textColor="#0099cc" />

    <EditText
        android:id="@+id/price_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/author_u"
        android:ems="10"
        android:hint="@string/search_price" />

</RelativeLayout>
</ScrollView>