<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <TextView
        android:id="@+id/search_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="77dp"
        android:textColor="#0099cc"
        android:text="@string/search_author" />

    <TextView
        android:id="@+id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_author"
        android:layout_alignLeft="@+id/search_author"
        android:layout_marginBottom="45dp"
        android:textColor="#0099cc"
        android:text="@string/search_title" />

    <EditText
        android:id="@+id/author_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_author"
        android:layout_alignLeft="@+id/title_s"
        android:ems="10"
        android:hint="@string/search_author" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/title_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_title"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/search_author"
        android:ems="10" 
        android:hint="@string/search_title"/>

    <Button
        android:id="@+id/button_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#0099cc"
        android:text="@string/search" />

</RelativeLayout>